package com.github.tomap.modeler.model.diagramClass.type;

public class Integer extends TypeBase{

	public Integer() {
		super("int", 4);
	}

}
