package com.github.tomap.modeler.model.diagramClass.type;

public class Void extends TypeBase{

	public Void() {
		super("void", 0);
	}

}
