package com.github.tomap.modeler.model.diagramClass.visibility;

public class Package extends Visibility{

	public Package() {
		super("~");
	}

}
